fixed navbar color schema and desktop view layout issues caused by fixing toggle feature

--- a/src/components/Navigation/navigation.scss
+++ b/src/components/Navigation/navigation.scss
@@ -115,6 +115,10 @@
 }
 
 @media screen and (min-width: 992px) {
+  #navbarNav {
+    justify-content: flex-end;
+  }
+
   .logo {
     margin-left: -2vw;
   }
@@ -150,7 +154,7 @@
 
   .contact-link {
     &:after {
-      margin-left: -2.7rem;
+      margin-left: -1rem;
       margin-top: 1.5rem;
     }
   }
